--- a/css/style.css
+++ b/css/style.css
@@ -95,12 +95,28 @@ img {
      .link:hover,
      .link:focus {
         color:#404bbf;
-        
      }
-    
-     
-     
-     
+     .link-studio{
+        color:#2e2f42;
+        font-size: 16px;
+        line-height: 1.5 ;
+        font-weight: 500;
+        letter-spacing: 0.02em ;
+        padding: 24px 0;
+        display: block;
+     }
+     .link-studio:hover,
+     .link-studio:focus {
+      color: #404BBF;
+     }
+     .link-studio::after{
+        content: '';
+        width: 48px;
+        height: 8px;
+        display: flex;
+        justify-self: end;
+     }
+
     .title{
         color:#FFF;
         text-align: center;
@@ -314,6 +330,10 @@ border-radius: 50%;
 align-items: center;
 justify-content: center;
 }
+.icon-link:hover,
+.icon-link:focus{
+    background-color: #404BBF;
+}
 
 .header{
 
@@ -387,8 +407,6 @@ color:#4D5AE5;
 
 .footer{
  background-color: #2E2F42;
-
- 
  padding: 100px 0;
 }
 .text-footer{
@@ -398,8 +416,14 @@ color:#4D5AE5;
     line-height: 1.5;
     letter-spacing: 0.02em ;
     max-width: 264px;
+    display:block;
+
+    
+   
+  
 }
 .logo-footer{
+
     color: #4D5AE5;
     font-family: Raleway;
     font-size: 18px;
@@ -408,10 +432,53 @@ color:#4D5AE5;
     line-height: 21px;
     letter-spacing: 0.54px;
     text-transform: uppercase;
-    
-    display: inline-block;
     margin-bottom: 16px;
+    
 }
 .web-footer{
     color:  #F4F4FD;
+}
+
+    
+
+.social-footer{
+   
+    max-height: 24px;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px; 
+    letter-spacing: 0.32px; 
+    display: flex;
+    margin-left: 269px;
+}
+.social_media{
+    
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    
+    
+
+}
+.social_media_item{
+    width: 40px;
+    height: 40px;
+       
+}
+.social_media_link{
+    width: 100%;
+   height: 100%;
+display: flex;
+background-color: #4D5AE5;
+border-radius: 50%;
+align-items: center;
+justify-content: center;
+}
+.icon_social_media{
+    fill: #F4F4FD;
+}
+.social_media_link:hover,
+.social_media_link:focus{
+    background-color: #31D0AA;
 }
