--- a/css/style.css
+++ b/css/style.css
@@ -72,10 +72,15 @@ img {
 
 
 .section-first{
+    max-width: 1440px;
     background-color:rgba(46, 47, 66, 0.70);
     padding-top: 188px;
     padding-bottom: 188px;
     background-image: linear-gradient( rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/bg_section-1.jpg)  ;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
      
     
  
@@ -176,19 +181,21 @@ img {
     gap: 24px;
 
 }
-.icon-item{
-   
-    width: 264px;
-    height: 112px;
-    background-color: #F4F4FD;
-    border: 1px solid  #8E8F99;
-    border-radius: 4px;
-    margin-bottom: 8px;
-    display: flex ;
+.icon_container{
+    display: flex;
     align-items: center;
     justify-content: center;
-    
+    height: 112px;
+    width: 264px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px; 
+    border: 1px solid  #8E8F99;
 }
+.icon-item{
+    border-radius: 4px;
+    margin-bottom: 8px;
+    }
 .icon-icon{
    
 }
@@ -476,7 +483,7 @@ color:#4D5AE5;
 .social_media_item{
     width: 40px;
     height: 40px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
        
 }
 .social_media_link{
