--- a/css/style.css
+++ b/css/style.css
@@ -102,13 +102,14 @@ img {
         color:#404bbf;
      }
      .link-studio{
-        color:#2e2f42;
+        color:#404bbf;
         font-size: 16px;
         line-height: 1.5 ;
         font-weight: 500;
         letter-spacing: 0.02em ;
         padding: 24px 0;
         display: block;
+        position: relative; 
      }
      .link-studio:hover,
      .link-studio:focus {
@@ -116,10 +117,15 @@ img {
      }
      .link-studio::after{
         content: '';
-        width: 48px;
+        width: 100%;
         height: 8px;
-        display: flex;
-        justify-self: end;
+        position: absolute; 
+        left: 0; 
+        bottom: -1px; 
+        height: 4px;
+        background-color: #404bbf; 
+        border-radius: 2px; 
+        
      }
 
     .title{
@@ -346,6 +352,7 @@ justify-content: center;
 .header{
 
     border-bottom: 1px solid #e7e9fc ;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     }
 
 .logo{
