--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ img {
     font-size: 16px;
     line-height: 1.5 ;
     letter-spacing: 0.02em;
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     
     
@@ -110,10 +111,12 @@ img {
         padding: 24px 0;
         display: block;
         position: relative; 
+        transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      }
      .link-studio:hover,
      .link-studio:focus {
       color: #404BBF;
+      
      }
      .link-studio::after{
         content: '';
@@ -125,7 +128,7 @@ img {
         height: 4px;
         background-color: #404bbf; 
         border-radius: 2px; 
-        
+
      }
 
     .title{
@@ -165,13 +168,7 @@ img {
     border: none;
     min-width: 169px;
     height: 56px;
-
-    
-    
-    
-    
-    
-    
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:focus,
 .button:hover{
@@ -328,7 +325,7 @@ overflow: hidden;
 .icon-item-link{
     width: 40px;
    height: 40px;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+   
    
 }
 .social-icon{
@@ -343,6 +340,7 @@ background-color: #4D5AE5;
 border-radius: 50%;
 align-items: center;
 justify-content: center;
+transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-link:hover,
 .icon-link:focus{
@@ -501,6 +499,7 @@ background-color: #4D5AE5;
 border-radius: 50%;
 align-items: center;
 justify-content: center;
+transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon_social_media{
     fill: #F4F4FD;
