--- a/css/style.css
+++ b/css/style.css
@@ -390,12 +390,22 @@ color:#4D5AE5;
 
 .portfolio-item{
     width: 360px;
-   
-    
-    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.portfolio-item:hover{
+    box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
     
-    
+   .container_wrap{
+    position: relative;
+   } 
+   .container_image{
+    position: absolute;
+    display: flex;
+   }
+   .text_wrap{
+    position: absolute;
+   }
 
 
 
