--- a/css/style.css
+++ b/css/style.css
@@ -398,13 +398,27 @@ color:#4D5AE5;
     
    .container_wrap{
     position: relative;
+    transform: translate(0);
+    overflow:hidden;
    } 
-   .container_image{
-    position: absolute;
-    display: flex;
+   .container_wrap:hover .text_wrap{
+    transform: translate(100%);
    }
+
    .text_wrap{
     position: absolute;
+    height: 100%;
+    width: 100%;
+    color:  #F4F4FD;
+font-family: Roboto;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px; 
+letter-spacing: 0.32px;
+    
+    padding: 40px 32px;
+    background-color: #4D5AE5;
+    top: 0px;
    }
 
 
