--- a/css/style.css
+++ b/css/style.css
@@ -398,11 +398,10 @@ color:#4D5AE5;
     
    .container_wrap{
     position: relative;
-    transform: translate(0);
     overflow:hidden;
    } 
    .container_wrap:hover .text_wrap{
-    transform: translate(100%);
+    transform: translateY(0%);
    }
 
    .text_wrap{
@@ -410,12 +409,12 @@ color:#4D5AE5;
     height: 100%;
     width: 100%;
     color:  #F4F4FD;
-font-family: Roboto;
-font-size: 16px;
-font-weight: 400;
-line-height: 24px; 
-letter-spacing: 0.32px;
-    
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px; 
+    letter-spacing: 0.32px;
+    transform: translateY(100%);
     padding: 40px 32px;
     background-color: #4D5AE5;
     top: 0px;
