--- a/css/style.css
+++ b/css/style.css
@@ -418,6 +418,7 @@ color:#4D5AE5;
     padding: 40px 32px;
     background-color: #4D5AE5;
     top: 0px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
    }
 
 
